--- a/faq.html
+++ b/faq.html
@@ -15,7 +15,7 @@
         <img src= "red_star.png">
     </div>
         <ul class="Btns">
-        <li class="active"><a class = "active1" href="hades.html">Home</a></li>
+        <li class="active"><a class = "active1" href="index.html">Home</a></li>
         <li class="active"><a class = "active2" href="faq.html">Questions</a></li>
         <li class="active"><a class = "active1" href="whitehades.html">WhiteHades</a></li>
         <li class="active"><a class = "active1" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Privacy Policy</a></li>
